testsuite/gsksl/errors/missing-colon-in-conditional.glsl

void
main  ()
{
  bool b;
  int y = b ? 1;
}
